flower shop project complete

--- a/index.html
+++ b/index.html
@@ -27,5 +27,110 @@
         </div>
       </div>
     </header>
+
+    <section id="fetured">
+      <div class="container">
+        <div class="section-heading">
+          <h2>our featured flowers</h2>
+          <p>
+            it is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at it's layout.
+          </p>
+        </div>
+        <div class="section-content">
+          <div class="flower">
+            <div class="flower-img">
+              <img src="images/pngwing 6.png" alt="" />
+            </div>
+            <p>pink flower tree</p>
+          </div>
+          <div class="flower">
+            <div class="flower-img blue">
+              <img src="images/pngwing 7.png" alt="" />
+            </div>
+            <p>pink flower tree</p>
+          </div>
+          <div class="flower">
+            <div class="flower-img green">
+              <img src="images/pngwing 8.png" alt="" />
+            </div>
+            <p>pink flower tree</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="hot-deal">
+      <div class="container hot-deal-main">
+        <div class="hot-deal-text">
+          <h2>Hot deal ! sale up to 25% <span class="important">off</span></h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at it's layout.
+          </p>
+          <button>sign up</button>
+        </div>
+        <div class="hot-deal-img">
+          <img src="images/pngwing 8.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="section-heading">
+          <h2>Instagram</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at it's layout.
+          </p>
+        </div>
+        <div class="section-heading">
+          <h2>Image section home work,change it ASAP</h2>
+
+        </div>
+        <!-- <div><h1>Image Section Home Work,Change it ASAP</h1></div> -->
+        <div class="section-content">
+          <div class="flower">
+            <div class="flower-img">
+              <img src="images/Flower 01.png" alt="" />
+            </div>
+          </div>
+          <div class="flower">
+            <div class="flower-img">
+              <img src="images/Rectangle 4.png" alt="" />
+            </div>
+          </div>
+          <div class="flower">
+            <div class="flower-img">
+              <img src="images/Rectangle 5.png" alt="" />
+            </div>
+          </div>
+          <div class="flower">
+            <div class="flower-img">
+              <img src="images/Rectangle 6.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="newsletter">
+      <!-- <div class="section-heading"></div> -->
+      <div class="container newsletter-main">
+        <div class="section-heading">
+          <h2>Get the latest deals</h2>
+          <p>$30 coupon for first shopping</p>
+        </div>
+      <form >
+        <input placeholder="input your emil her" type="email" name="" id="">
+        <button>subscribe</button>
+      </form>
+        <!-- <h2>Get the latest deals</h2> -->
+        <!-- <p>$30 coupon for first shopping</p> -->
+      </div>
+      <!-- <form > -->
+      <!-- <input type="email" name="" id=""> -->
+      <!-- <button>subscribe</button> -->
+
+      <!-- </form> -->
+    </section>
   </body>
 </html>
